# QuadArt_host_cpp

./: CMakeLists.txt  Makefile  Untitled Diagram.drawio  camera.cpp  camera.h  class_diagram.drawio  control_loop.cpp  control_loop.h  img_proc.cpp  img_proc.h  main.cpp  x_observer  y_observer  z_observer
Py/: trajectory.py
Scripts/: identification.m  post.py  trajectory.py
deprecated/: Makefile
deprecated/Scripts/: post.py  trajectory.py
deprecated/include/: common.h  control_loop.h  img_proc.h
deprecated/src/: img_proc.cpp  trajectory_sched.cpp
include/: Crazyradio.h  camera.h  common.h  control_loop.h  crazy_flie.h  img_proc.h  observer.h  pid.h  pose_estim.h  trajectory_sched.h
src/: CMakeLists.txt  Crazyradio.cpp  camera.cpp  control_loop.cpp  crazy_flie.cpp  img_proc.cpp  main.cpp  observer.cpp  pid.cpp  pose_estim.cpp  processor.cpp  processor.h  trajectory_sched.cpp
src/camera/: CMakeLists.txt  basler_camera.cpp  basler_camera.h  camera.h  image_observer.h
src/image/: CMakeLists.txt  aruco_pos_sensor.cpp  aruco_pos_sensor.h
src/position/: pos_measurement_interpolator.h  pos_observer.h  pos_sensor.h
